5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1679_1104.log
== TEST (2019-05-01 21:10:29) 
-- CODE:
i1 = float(input()), float(input())
i2 = float(input()), float(input())

-- OUTPUT:
Entradas:  11.3 , 5.7 , 2.3
Volume:  81.987 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:10:35) 
-- CODE:
i1 = float(input()), float(input())
i2 = float(input()), float(input())

-- OUTPUT:
Entradas:  11.3 , 5.7 , 2.3
Volume:  81.987 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:18:38) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
print("Intervalo 1: ", a,"",b,"")
print("Intervalo 2: ", c,"",d,"")

if (i1 == )
-- ERROR:
File "XXXX", line 8
    if (i1 == )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
